--- a/cavs/frontend/cxx/CMakeLists.txt
+++ b/cavs/frontend/cxx/CMakeLists.txt
@@ -1,8 +1,8 @@
-FILE(GLOB cxx_srcs *.cc)
-FILE(GLOB test_srcs *_test.cc)
+FILE(GLOB curr_cxx_srcs *.cc)
+FILE(GLOB curr_test_srcs *_test.cc)
 
-FOREACH(test ${test_srcs})
-  LIST(REMOVE_ITEM cxx_srcs ${test})
+FOREACH(test ${curr_test_srcs})
+  LIST(REMOVE_ITEM curr_cxx_srcs ${test})
 ENDFOREACH()
 
-SET(cxx_srcs ${cxx_srcs} PARENT_SCOPE)
+SET(cxx_srcs ${cxx_srcs} ${curr_cxx_srcs} PARENT_SCOPE)
