--- a/cavs/backend/CMakeLists.txt
+++ b/cavs/backend/CMakeLists.txt
@@ -12,3 +12,5 @@ ENDFOREACH()
 
 SET(cxx_srcs ${cxx_srcs} ${curr_cxx_srcs} PARENT_SCOPE)
 SET(cuda_srcs ${cuda_srcs} ${curr_cuda_srcs} PARENT_SCOPE)
+SET(test_cxx_srcs ${test_cxx_srcs} ${curr_test_srcs} PARENT_SCOPE)
+SET(test_cuda_srcs ${test_cuda_srcs} ${curr_test_cuda} PARENT_SCOPE)
