cmake build framework done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,5 +58,6 @@ ENDIF()
 
 SET(EXECUTABLE_OUTPUT_PATH, "${PROJECT_SOURCE_DIR/bin}")
 SET(LIBRARY_OUTPUT_PATH, "${PROJECT_SOURCE_DIR/lib}")
+
 ADD_SUBDIRECTORY(cavs)
-#add_subdirectory(apps)
+ADD_SUBDIRECTORY(apps)
