--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,13 @@ IF(GLOG_FOUND)
   LIST(APPEND EXTERNAL_LIBS ${GLOG_LIBRARIES})
 ENDIF()
 
+FIND_PACKAGE(GFlags REQUIRED)
+IF(GFLAGS_FOUND)
+  MESSAGE(STATUS "GFLAGS include dirs:" ${GFLAGS_INCLUDE_DIRS})
+  MESSAGE(STATUS "GFLAGS libraries:" ${GFLAGS_LIBRARIES})
+  LIST(APPEND EXTERNAL_LIBS ${GFLAGS_LIBRARIES})
+ENDIF()
+
 SET(EXECUTABLE_OUTPUT_PATH, "${PROJECT_SOURCE_DIR/bin}")
 SET(LIBRARY_OUTPUT_PATH, "${PROJECT_SOURCE_DIR/lib}")
 
