add backend support for kernel-fusion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,21 @@ IF(CUDA_FOUND)
   LIST(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_50,code=sm_50 -gencode arch=compute_52,code=sm_52")
   LIST(APPEND CUDA_NVCC_FLAGS "-std=c++11")
   LIST(APPEND EXTERNAL_LIBS ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
+  FIND_LIBRARY(CUDA_NVRTC_LIB nvrtc PATHS ${CUDA_TOOLKIT_ROOT_DIR} PATH_SUFFIXES lib64)
+  IF(CUDA_NVRTC_LIB)
+    MESSAGE(STATUS "NVRTC libraries:" ${CUDA_NVRTC_LIB})
+    LIST(APPEND EXTERNAL_LIBS ${CUDA_NVRTC_LIB})
+  ELSE()
+    MESSAGE(FATAL_ERROR "Cannot find libnvrtc.so")
+  ENDIF()
+  FIND_LIBRARY(CUDA_DRIVER_LIB cuda PATHS ${CUDA_TOOLKIT_ROOT_DIR} PATH_SUFFIXES lib64 lib64/stubs)
+  IF(CUDA_DRIVER_LIB)
+    MESSAGE(STATUS "cuda driver libraries:" ${CUDA_DRIVER_LIB})
+    LIST(APPEND EXTERNAL_LIBS ${CUDA_DRIVER_LIB})
+  ELSE()
+    MESSAGE(FATAL_ERROR "Cannot find libcuda.so")
+  ENDIF()
+
 ENDIF()
 
 FIND_PACKAGE(CuDNN 5.1 REQUIRED)
