--- a/cavs/frontend/cxx/CMakeLists.txt
+++ b/cavs/frontend/cxx/CMakeLists.txt
@@ -6,4 +6,4 @@ FOREACH(test ${curr_test_srcs})
 ENDFOREACH()
 
 SET(cxx_srcs ${cxx_srcs} ${curr_cxx_srcs} PARENT_SCOPE)
-SET(test_srcs ${test_srcs} ${curr_test_srcs} PARENT_SCOPE)
+SET(test_cxx_srcs ${test_cxx_srcs} ${curr_test_srcs} PARENT_SCOPE)
